Fixed list alignment in header

--- a/src/css/9.css
+++ b/src/css/9.css
@@ -105,7 +105,7 @@ ul {
 
 .navbar-short {
   display: inline-block;
-  float: right;
+  /* float: right; */
   padding: 7px;
 }
 
@@ -210,7 +210,7 @@ ul {
 
   .navbar ul {
     display: inline-block;
-    float: right;
+    /* float: right; */
     padding: 0;
     margin: 0;
   }
